# terraform-patterns

./: .gitignore
aws-gcp-wif-connection/: .pre-commit-config.yaml  pyproject.toml
aws-gcp-wif-connection/infra/: .gitignore  main.tf  providers.tf  terraform.tf  terraform.tfvars.example  variables.tf
aws-gcp-wif-connection/infra/modules/bigquery/: data.tf  main.tf  outputs.tf  variables.tf
aws-gcp-wif-connection/infra/modules/lambda/: README.md  data.tf  main.tf  outputs.tf  variables.tf  versions.tf
aws-gcp-wif-connection/infra/modules/lambda_layer/: README.md  build_layer.sh  data.tf  locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
aws-gcp-wif-connection/infra/modules/wif/: README.md  iam_bindings.tf  main.tf  outputs.tf  service_account.tf  variables.tf  workload_identity_pool.tf  workload_identity_provider.tf
aws-gcp-wif-connection/src/: pyproject.toml
aws-gcp-wif-connection/src/lambdas/: dependencies.txt
aws-gcp-wif-connection/src/lambdas/big_query_test/: main.py  requirements.txt
aws-gcp-wif-connection/src/lambdas/big_query_test/services/: BigQueryProvider.py  QueryConstructor.py  exceptions.py
