[tool.poetry]
name = "aws-gcp-wif-connection"
version = "0.1.0"
description = "Example code for creating AWS to GCP connection using WIF"
authors = ["Łukasz Broda <l.t.broda@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0.0"
google-cloud-bigquery = ">=3.40.0,<4.0.0"
google-auth = ">=2.35.0,<3.0.0"
aws-lambda-powertools = ">=3.24.0,<4.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
